Add vendor data

--- a/make_dfs.ipynb
+++ b/make_dfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w3/z8qntdcx62v2qmj6z9fwfhrh0000gp/T/ipykernel_3497/4073666699.py:5: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/w3/z8qntdcx62v2qmj6z9fwfhrh0000gp/T/ipykernel_27738/4073666699.py:5: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  courseSectionRosters_df = pd.read_csv(os.path.join(path, 'a_courseSectionRosters_2024-08-29.csv'))\n"
      ]
     }
@@ -65,12 +65,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## courseSections_df and courseSectionRosters_df"
+    "## courseSections_df and courseSectionRosters_df\n",
+    "1. Combines the two dataframes on courseSectionId\n",
+    "2. Drops courses that are district-wide or school-wide"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,12 +87,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## vendorUsage_df"
+    "## vendorUsage_df\n",
+    "1. Remove unused columns (`weeklyUsageMinutes`, `active`, `id`)\n",
+    "2. Map usageTypeIds to new categorical (ordinal) features (`iready_math`, `iready_reading`, `bbb_literacy`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +191,7 @@
        "4  11894     72609      44809       0  2018            1                   0"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +275,7 @@
        "4      44809  2018            1"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +311,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +365,7 @@
        "(158007, 5)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -426,6 +430,102 @@
     "\n",
     "print(\"Combining rows with the same studentId and year:\")\n",
     "print(vendorUsage_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>studentId</th>\n",
+       "      <th>year</th>\n",
+       "      <th>iready_math</th>\n",
+       "      <th>iready_reading</th>\n",
+       "      <th>bbb_literacy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>44777</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>44777</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>44783</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>44784</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>44784</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   studentId  year  iready_math  iready_reading  bbb_literacy\n",
+       "0      44777  2018            2               0             0\n",
+       "1      44777  2019            2               2             0\n",
+       "2      44783  2018            2               0             0\n",
+       "3      44784  2018            0               0             0\n",
+       "4      44784  2019            2               0             0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vendorUsage_df.head()"
    ]
   },
   {
@@ -2434,7 +2534,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# act_11"
+    "# act_11\n",
+    "Creates four dataframes: `actMath_11_df`, `actReading_11_df`, `actScience_11_df`, `actEnglish_11_df`"
    ]
   },
   {
@@ -9269,13 +9370,6 @@
     "actScience_11_df.to_csv('dataframes/actScience_11.csv', index=False)\n",
     "actEnglish_11_df.to_csv('dataframes/actEnglish_11.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
