--- a/louisemarie-explore.ipynb
+++ b/louisemarie-explore.ipynb
@@ -1999,212 +1999,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>vanityId</th>\n",
-       "      <th>year</th>\n",
-       "      <th>schoolId</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40388</td>\n",
-       "      <td>PE 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>40389</td>\n",
-       "      <td>READING 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>40390</td>\n",
-       "      <td>HmroomPK6</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>40391</td>\n",
-       "      <td>LANGUAGE 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>40392</td>\n",
-       "      <td>SCIENCE 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>40393</td>\n",
-       "      <td>MATH 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>40394</td>\n",
-       "      <td>SOC ST 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>40395</td>\n",
-       "      <td>HmroomPK6</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>40396</td>\n",
-       "      <td>READING 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>40397</td>\n",
-       "      <td>MATH 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>40398</td>\n",
-       "      <td>SCIENCE 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>40399</td>\n",
-       "      <td>PE 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>40400</td>\n",
-       "      <td>LANGUAGE 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>40401</td>\n",
-       "      <td>SOC ST 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>40402</td>\n",
-       "      <td>MATH 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>40403</td>\n",
-       "      <td>HOMEROOM</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>40404</td>\n",
-       "      <td>SOC ST 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>40405</td>\n",
-       "      <td>SCIENCE 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>40406</td>\n",
-       "      <td>LANGUAGE 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>40407</td>\n",
-       "      <td>READING 4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id    vanityId  year  schoolId\n",
-       "0   40388        PE 4  2015       222\n",
-       "1   40389   READING 4  2015       222\n",
-       "2   40390   HmroomPK6  2015       222\n",
-       "3   40391  LANGUAGE 4  2015       222\n",
-       "4   40392   SCIENCE 4  2015       222\n",
-       "5   40393      MATH 4  2015       222\n",
-       "6   40394    SOC ST 4  2015       222\n",
-       "7   40395   HmroomPK6  2015       222\n",
-       "8   40396   READING 4  2015       222\n",
-       "9   40397      MATH 4  2015       222\n",
-       "10  40398   SCIENCE 4  2015       222\n",
-       "11  40399        PE 4  2015       222\n",
-       "12  40400  LANGUAGE 4  2015       222\n",
-       "13  40401    SOC ST 4  2015       222\n",
-       "14  40402      MATH 4  2015       222\n",
-       "15  40403    HOMEROOM  2015       222\n",
-       "16  40404    SOC ST 4  2015       222\n",
-       "17  40405   SCIENCE 4  2015       222\n",
-       "18  40406  LANGUAGE 4  2015       222\n",
-       "19  40407   READING 4  2015       222"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'courseSections_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m courseSections_df\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m50\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'courseSections_df' is not defined"
+     ]
     }
    ],
    "source": [
-    "courseSections_df.head(20)"
+    "courseSections_df.head(50)"
    ]
   },
   {
