--- a/allison-experiment.ipynb
+++ b/allison-experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "actMath_11_df = pd.read_csv('dataframes/actMath_11.csv')"
+    "actMath_11_df = pd.read_csv('dataframes/actMath_11.csv')\n",
+    "actMath_11_encoded_df = pd.read_csv('dataframes/actMath_11_encoded_df.csv')"
    ]
   },
   {
@@ -5163,7 +5164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5350,41 +5351,363 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "courses_by_subject = {\n",
-    "    \"Math\": [\n",
-    "        \"course_Algebra I B\", \"course_Algebra I A\", \"course_Algebra I\", \"course_AlgebraicCon\",\n",
-    "        \"course_Alg II/Trig\", \"course_ALIITRIGH/A\", \"course_Alg Esntls B\", \"course_Algebra II\",\n",
-    "        \"course_Alg II/TrigAC\", \"course_Geometry\", \"course_Geometry Adv\", \"course_GeometryACCE\",\n",
-    "        \"course_GEOM ADV\", \"course_Alg I B ACCE\", \"course_AlgEnrichmet\"\n",
-    "    ],\n",
-    "    \"Science\": [\n",
-    "        \"course_Physical Sci\", \"course_Phy Sci Adv\", \"course_Biology\", \"course_Chemistry\",\n",
-    "        \"course_ChemistryAdv\", \"course_Biology Adv\", \"course_BIOLOGY ADV\", \"course_Anat/Physio\", \n",
-    "        \"course_Marine Sci\", \"course_Ear/SpaceSci\", \"course_Enviro Sci\", \"course_For/Cri Inve\", \n",
-    "        \"course_Forestry\", \"course_Intermed Agr\", \"course_Agriscience\", \"course_Advanced Agr\", \n",
-    "        \"course_Fund Agrisci\"\n",
-    "    ],\n",
-    "    \"English\": [\n",
-    "        \"course_English Gr10\", \"course_Eng Gr10 Adv\", \"course_English Gr11\", \"course_EngLang,BS10\", \n",
-    "        \"course_Eng Ess 10\", \"course_Eng Ess 11\", \"course_Eng Ess 11\", \"course_EngGr9-CR\", \n",
-    "        \"course_EngEss: Phy Sci\", \"course_Ess: Phy Sci\", \"course_English Gr 9\", \"course_EnglGr10ACCE\"\n",
-    "    ],\n",
-    "    \"History\": [\n",
-    "        \"course_USHis I G10\", \"course_USHis I Adv\", \"course_US His-1877\", \"course_HISTUS1877AC\", \n",
-    "        \"course_USHis InD-P\", \"course_HS US 10 ADV\", \"course_Enviro Sci\", \"course_USHisIG10ACC\", \n",
-    "        \"course_USHis 1877-P\", \"course_WH 1500-P\", \"course_WH 1500-P Adv\", \"course_WH1500-P-CR\"\n",
-    "    ],\n",
-    "    \"Foreign Language\": [\n",
-    "        \"course_Spanish 1\", \"course_Spanish 2\", \"course_Spanish 3\", \"course_SPANISH I\", \n",
-    "        \"course_SPANISH II\", \"course_SpanIACC\", \"course_SPAN II ACCE\", \"course_FrenchIACCE\", \n",
-    "        \"course_German1ACCES\", \"course_LATIN 1 ACC\"\n",
-    "    ]\n",
-    "}"
+    "# with encoded df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>studentId</th>\n",
+       "      <th>is_proficient</th>\n",
+       "      <th>proficient_score</th>\n",
+       "      <th>proficient_diff</th>\n",
+       "      <th>school_High School A</th>\n",
+       "      <th>school_High School B</th>\n",
+       "      <th>school_High School C</th>\n",
+       "      <th>school_High School D</th>\n",
+       "      <th>iready_math</th>\n",
+       "      <th>iready_reading</th>\n",
+       "      <th>bbb_literacy</th>\n",
+       "      <th>category_MATHEMATICS</th>\n",
+       "      <th>category_ENGLISH</th>\n",
+       "      <th>category_SCIENCE</th>\n",
+       "      <th>category_SOCIAL_STUDIES</th>\n",
+       "      <th>category_FOREIGN_LANGUAGE</th>\n",
+       "      <th>category_PERFORMING_ARTS</th>\n",
+       "      <th>category_VISUAL_ARTS</th>\n",
+       "      <th>category_TECHNOLOGY</th>\n",
+       "      <th>category_BUSINESS</th>\n",
+       "      <th>category_TRADES</th>\n",
+       "      <th>category_AGRICULTURE</th>\n",
+       "      <th>category_PHYSICAL_EDUCATION</th>\n",
+       "      <th>category_HEALTH</th>\n",
+       "      <th>category_CAREER_PREP</th>\n",
+       "      <th>category_MILITARY_SCIENCE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>45054</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.529412</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45054</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.529412</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>45440</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.941176</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45440</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.941176</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>45440</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.941176</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   studentId  is_proficient  proficient_score  proficient_diff  \\\n",
+       "0      45054          False          0.529412             -8.0   \n",
+       "1      45054          False          0.529412             -8.0   \n",
+       "2      45440          False          0.941176             -1.0   \n",
+       "3      45440          False          0.941176             -1.0   \n",
+       "4      45440          False          0.941176             -1.0   \n",
+       "\n",
+       "   school_High School A  school_High School B  school_High School C  \\\n",
+       "0                  True                 False                 False   \n",
+       "1                  True                 False                 False   \n",
+       "2                 False                 False                 False   \n",
+       "3                 False                 False                 False   \n",
+       "4                 False                 False                 False   \n",
+       "\n",
+       "   school_High School D  iready_math  iready_reading  bbb_literacy  \\\n",
+       "0                 False            0               0             0   \n",
+       "1                 False            0               0             0   \n",
+       "2                 False            0               0             0   \n",
+       "3                 False            0               0             0   \n",
+       "4                 False            0               0             0   \n",
+       "\n",
+       "   category_MATHEMATICS  category_ENGLISH  category_SCIENCE  \\\n",
+       "0                     1                 0                 0   \n",
+       "1                     1                 0                 0   \n",
+       "2                     0                 0                 0   \n",
+       "3                     0                 0                 0   \n",
+       "4                     0                 0                 0   \n",
+       "\n",
+       "   category_SOCIAL_STUDIES  category_FOREIGN_LANGUAGE  \\\n",
+       "0                        0                          0   \n",
+       "1                        0                          0   \n",
+       "2                        0                          0   \n",
+       "3                        0                          0   \n",
+       "4                        0                          0   \n",
+       "\n",
+       "   category_PERFORMING_ARTS  category_VISUAL_ARTS  category_TECHNOLOGY  \\\n",
+       "0                     False                 False                False   \n",
+       "1                     False                 False                False   \n",
+       "2                     False                 False                False   \n",
+       "3                     False                 False                False   \n",
+       "4                     False                 False                False   \n",
+       "\n",
+       "   category_BUSINESS  category_TRADES  category_AGRICULTURE  \\\n",
+       "0              False             True                 False   \n",
+       "1              False             True                 False   \n",
+       "2              False            False                 False   \n",
+       "3              False            False                 False   \n",
+       "4              False            False                 False   \n",
+       "\n",
+       "   category_PHYSICAL_EDUCATION  category_HEALTH  category_CAREER_PREP  \\\n",
+       "0                        False            False                 False   \n",
+       "1                        False            False                 False   \n",
+       "2                        False            False                 False   \n",
+       "3                        False            False                 False   \n",
+       "4                        False            False                 False   \n",
+       "\n",
+       "   category_MILITARY_SCIENCE  \n",
+       "0                      False  \n",
+       "1                      False  \n",
+       "2                      False  \n",
+       "3                      False  \n",
+       "4                      False  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actMath_11_encoded_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "threshold= 1.2\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.89      0.91      0.90       644\n",
+      "        True       0.49      0.44      0.46       124\n",
+      "\n",
+      "    accuracy                           0.84       768\n",
+      "   macro avg       0.69      0.67      0.68       768\n",
+      "weighted avg       0.83      0.84      0.83       768\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[588  56]\n",
+      " [ 70  54]]\n",
+      "\n",
+      "Top 10 Most Important Features:\n",
+      "                      feature  importance\n",
+      "1        school_High School B    0.182421\n",
+      "0        school_High School A    0.166547\n",
+      "3        school_High School D    0.146068\n",
+      "2        school_High School C    0.114829\n",
+      "9            category_SCIENCE    0.067716\n",
+      "8            category_ENGLISH    0.065853\n",
+      "4                 iready_math    0.040573\n",
+      "10    category_SOCIAL_STUDIES    0.039263\n",
+      "11  category_FOREIGN_LANGUAGE    0.037181\n",
+      "17       category_AGRICULTURE    0.034687\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Separate features and target variable\n",
+    "X = actMath_11_encoded_df.drop(['studentId', 'is_proficient', 'proficient_score', 'proficient_diff'], axis=1)\n",
+    "y = actMath_11_encoded_df['proficient_score']\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=actMath_11_encoded_df['is_proficient'])\n",
+    "\n",
+    "# Create a linear regression model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred_continuous = model.predict(X_test)\n",
+    "\n",
+    "# Should predict >1.0 if proficient, <1.0 if not proficient\n",
+    "threshold = 1.2  # ADJUST\n",
+    "y_pred_bool = y_pred_continuous >= threshold\n",
+    "y_test_bool = y_test >= threshold\n",
+    "\n",
+    "print(\"threshold=\", threshold)\n",
+    "# Print the classification report\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test_bool, y_pred_bool))\n",
+    "\n",
+    "# Print the confusion matrix\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(confusion_matrix(y_test_bool, y_pred_bool))\n",
+    "\n",
+    "# Print the top 10 most important features\n",
+    "feature_importance = pd.DataFrame({'feature': X.columns, 'importance': np.abs(model.coef_)})\n",
+    "feature_importance = feature_importance.sort_values('importance', ascending=False)\n",
+    "print(\"\\nTop 10 Most Important Features:\")\n",
+    "print(feature_importance.head(10))"
    ]
   },
   {
