Added encoded dataframes

--- a/make_dfs.ipynb
+++ b/make_dfs.ipynb
@@ -13872,6 +13872,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## actMath_11"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
