--- a/make_dfs.ipynb
+++ b/make_dfs.ipynb
@@ -13905,7 +13905,7 @@
    "outputs": [],
    "source": [
     "actMath_11_core_categories = {\n",
-    "    # Core Subjects\n",
+    "    # Core Subjects RUN BY PRADNYA \n",
     "    \"MATHEMATICS\": {\n",
     "        \"regular\": [\n",
     "            \"course_Alg Esntls B\",\n",
