--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -23,7 +23,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ACT Math 11**"
+    "# actMath_11\n",
+    "- District: 45\n",
+    "- Year (Features): 2017\n",
+    "- Grades: 11\n",
+    "- Values / dataSource: actMath\n",
+    "- Features: \\[fill]\n",
+    "- Num features: x\n",
+    "- Label: `proficient_score`\n",
+    "- Accuracy:\n",
+    "- F1: \n",
+    "- Other metrics: \n",
+    "- Notes:"
    ]
   },
   {
