Added RF model on scantronReading_38_encoded

--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -12352,11 +12352,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# scantronReading_38_encoded, no past_proficient_score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scantronReading_38_encoded_df = pd.read_csv('dataframes/scantronReading_38_encoded.csv')\n",
+    "scantronReading_38_encoded_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create histogram of student grade levels\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(data=scantronReading_38_encoded_df, x='level')\n",
+    "plt.title('Distribution of Students by Grade Level')\n",
+    "plt.xlabel('Grade Level')\n",
+    "plt.ylabel('Number of Students')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = scantronReading_38_encoded_df.drop(['studentId', 'dataSource', 'is_proficient', 'proficient_score', 'level', 'past_proficient_score'], axis=1)\n",
+    "y = scantronReading_38_encoded_df['proficient_score']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123, stratify=scantronReading_38_encoded_df['is_proficient'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_depth = [5,15, 30]\n",
+    "n_estimators = [100,250,400]\n",
+    "param_grid = {'max_depth' : list(max_depth), 'n_estimators' : list(n_estimators)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grid Search to find the best hyperparameters \n",
+    "\n",
+    "print(\"Running Grid Search\")\n",
+    "rf_regressor = RandomForestRegressor()\n",
+    "\n",
+    "# will have a 3-fold cross validation \n",
+    "rf_grid = GridSearchCV(rf_regressor, param_grid, cv=3, scoring='neg_root_mean_squared_error')\n",
+    "rf_grid_search = rf_grid.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Done\")\n",
+    "rf_best_params = rf_grid_search.best_params_\n",
+    "\n",
+    "rf_best_params\n",
+    "\n",
+    "# {'max_depth': 5, 'n_estimators': 100}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Begin Random Forest ')\n",
+    "rf_model = RandomForestRegressor(max_depth=18, n_estimators=350)\n",
+    "rf_model.fit(X_train,y_train)\n",
+    "print('End')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_continuous = rf_model.predict(X_test)\n",
+    "rsme = mean_squared_error(y_test, y_pred_continuous, squared=False)\n",
+    "r2 = r2_score(y_test, y_pred_continuous)\n",
+    "\n",
+    "\n",
+    "threshold = 1.1  # ADJUST\n",
+    "y_pred_bool = y_pred_continuous >= threshold\n",
+    "y_test_bool = y_test >= threshold\n",
+    "\n",
+    "print(\"threshold=\", threshold)\n",
+    "# Print the classification report\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test_bool, y_pred_bool))\n",
+    "\n",
+    "# Print the confusion matrix\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(confusion_matrix(y_test_bool, y_pred_bool))\n",
+    "\n",
+    "\n",
+    "print('[RF] Root Mean Squared Error: {0}'.format(rsme))\n",
+    "print('[RF] R2: {0}'.format(r2))        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get feature importance scores\n",
+    "feature_importance = pd.DataFrame({\n",
+    "    'feature': X_train.columns,\n",
+    "    'importance': rf_model.feature_importances_\n",
+    "})\n",
+    "\n",
+    "# Sort features by importance in descending order\n",
+    "feature_importance = feature_importance.sort_values('importance', ascending=False)\n",
+    "\n",
+    "# Plot feature importances\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.barplot(x='importance', y='feature', data=feature_importance.head(15))\n",
+    "plt.title('Top 15 Most Important Features')\n",
+    "plt.xlabel('Feature Importance')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Print feature importance scores\n",
+    "print(\"\\nFeature Importance Scores:\")\n",
+    "print(feature_importance)\n"
+   ]
   }
  ],
  "metadata": {
