--- a/DecisionTree/ActMath.ipynb
+++ b/DecisionTree/ActMath.ipynb
@@ -4316,7 +4316,7 @@
     "print(classification_report(y_test_bool, y_pred_bool))\n",
     "\n",
     "print('[DT] Root Mean Squared Error: {0}'.format(dt_rmse))\n",
-    "print('[DT] R2: {0}'ScaSssssssSoiwhfowhoshoegnsrgnSSSStttttttsssssSSuuuSSScScanojfoghohgeoShghgklgh.format(dt_r2))"
+    "print('[DT] R2: {0}'.format(dt_r2))"
    ]
   },
   {
