updated file headers to be correct

--- a/LinearRegression/scantronMath.ipynb
+++ b/LinearRegression/scantronMath.ipynb
@@ -7,15 +7,15 @@
     "# scantronMath\n",
     "- District: 45\n",
     "- Year (Features): 2017\n",
-    "- Grades: 7, 6, 5, 8, 3, 4\n",
+    "- Grades: 7, 6, 5, 8, 4\n",
     "- Values / dataSource: scantronMath\n",
-    "- Features: \\[`past_proficient_score`, `course_Math 7 H/A`, `course_Eng 7 H/Adv`, `course_GeogH/AdvGr7`, `course_CivicH/Adv 7`, `course_ELAGrPK6H/Ad`, `course_SoSt6H/A`]\n",
-    "- Num features: 7\n",
+    "- Features: \\[`past_proficient_score`]\n",
+    "- Num features: 1\n",
     "- Label: `proficient_score`\n",
-    "- Accuracy: RMSE: 0.06, R^2: 0.39\n",
-    "- F1: \n",
-    "- Other metrics: \n",
-    "- Notes: Only significantly correlated feature is past_proficient_score, linear regression may not be suitable because there are two linear relationships with past_proficient_score"
+    "- Accuracy: 0.87\n",
+    "- F1: 0.84\n",
+    "- Other metrics: RMSE: 0.06, R^2: 0.46\n",
+    "- Notes: Only significantly correlated feature is past_proficient_score, no other features had linear relationships with the label. Dropped grade 3 because it was nearly all full of NaN values."
    ]
   },
   {
