--- a/LinearRegression/scantronReading.ipynb
+++ b/LinearRegression/scantronReading.ipynb
@@ -15,7 +15,7 @@
     "- Accuracy: 0.87\n",
     "- F1: 0.86\n",
     "- Other metrics: RMSE: 0.07, R^2: 0.60\n",
-    "- Notes: Used simple linear regression. Only significantly correlated feature is past_proficient_score, multiple linear regression may not be suitable because there are two linear relationships with past_proficient_score. Dropped grade 3 rows because they were nearly all full of NaN values for past_proficiency."
+    "- Notes: Used simple linear regression. Only significantly correlated feature is past_proficient_score, multiple linear regression may not be suitable because there are two linear relationships with past_proficient_score. Dropped grade 3 rows because they were nearly all full of NaN values for past_proficient_score."
    ]
   },
   {
