attempt to update header for act math 11

--- a/LinearRegression/actMath_11.ipynb
+++ b/LinearRegression/actMath_11.ipynb
@@ -9,18 +9,25 @@
     "- Year (Features): 2017\n",
     "- Grades: 11\n",
     "- Values / dataSource: actMath\n",
-    "- Features: \\['category_SCIENCE', 'category_SOCIAL_STUDIES', 'category_ENGLISH', 'category_MATHEMATICS', 'category_FOREIGN_LANGUAGE']\n",
-    "- Num features: 5\n",
+    "- Features: \\['school_High School A', 'school_High School B', 'school_High School C', 'school_High School D', 'category_MATHEMATICS', 'category_ENGLISH', 'category_SCIENCE', 'category_SOCIAL_STUDIES', 'category_FOREIGN_LANGUAGE', 'category_PERFORMING_ARTS', 'category_VISUAL_ARTS', 'category_TECHNOLOGY',\n",
+    " 'category_BUSINESS',\n",
+    " 'category_TRADES',\n",
+    " 'category_AGRICULTURE',\n",
+    " 'category_PHYSICAL_EDUCATION',\n",
+    " 'category_HEALTH',\n",
+    " 'category_CAREER_PREP',\n",
+    " 'category_MILITARY_SCIENCE']\n",
+    "- Num features: 19\n",
     "- Label: `proficient_score`\n",
-    "- Accuracy:\n",
-    "- F1: \n",
-    "- Other metrics: RMSE 0.08; R^2 0.25\n",
-    "- Notes: Linear Regression likely unsuitable for this exam; different combinations of features yield similar results"
+    "- Accuracy: 0.72\n",
+    "- F1: 0.67\n",
+    "- Other metrics: RMSE 0.22; R^2 0.20\n",
+    "- Notes: Dropping vendors from features caused no difference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +302,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -366,18 +373,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# features = ['category_SCIENCE', 'category_SOCIAL_STUDIES', 'category_ENGLISH', 'category_MATHEMATICS', 'category_FOREIGN_LANGUAGE']\n",
-    "toDrop = ['proficient_score', 'proficient_diff', 'studentId', 'is_proficient']\n",
+    "toDrop = ['proficient_score', 'proficient_diff', 'studentId', 'is_proficient', 'bbb_literacy', 'iready_math', 'iready_reading']\n",
     "features = [col for col in actMath11_df.columns if col not in toDrop]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +402,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,26 +413,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create labeled examples from the dataset\n",
-    "#X = actMath11_df.drop(columns=['is_proficient', 'proficient_score', 'proficient_diff', 'school_High School A', 'school_High School B', 'school_High School C', 'school_High School D'], inplace=False)\n",
-    "# X = actMath11_df[['category_MATHEMATICS', 'category_ENGLISH', 'category_SCIENCE',\n",
-    "#        'category_SOCIAL_STUDIES', 'category_FOREIGN_LANGUAGE',\n",
-    "#        'category_PERFORMING_ARTS', 'category_VISUAL_ARTS',\n",
-    "#        'category_TECHNOLOGY', 'category_BUSINESS', 'category_TRADES',\n",
-    "#        'category_AGRICULTURE', 'category_PHYSICAL_EDUCATION',\n",
-    "#        'category_HEALTH', 'category_CAREER_PREP', 'category_MILITARY_SCIENCE']]\n",
-    "higher_correlated_features = ['category_SCIENCE', 'category_SOCIAL_STUDIES', 'category_ENGLISH', 'category_MATHEMATICS', 'category_PERFORMING_ARTS']\n",
     "X = actMath11_df[features]\n",
     "y = actMath11_df['proficient_score']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -465,12 +484,12 @@
       "1        school_High School B        0.34\n",
       "3        school_High School D        0.27\n",
       "2        school_High School C        0.26\n",
-      "8            category_ENGLISH        0.13\n",
-      "10    category_SOCIAL_STUDIES        0.08\n",
-      "11  category_FOREIGN_LANGUAGE        0.06\n",
-      "17       category_AGRICULTURE        0.05\n",
-      "19            category_HEALTH        0.05\n",
-      "7        category_MATHEMATICS        0.04\n"
+      "5            category_ENGLISH        0.13\n",
+      "7     category_SOCIAL_STUDIES        0.08\n",
+      "8   category_FOREIGN_LANGUAGE        0.06\n",
+      "14       category_AGRICULTURE        0.05\n",
+      "16            category_HEALTH        0.05\n",
+      "4        category_MATHEMATICS        0.04\n"
      ]
     }
    ],
@@ -507,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
