--- a/LogisticRegression/actMath_11.ipynb
+++ b/LogisticRegression/actMath_11.ipynb
@@ -301,10 +301,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get a list of columns with only True and False values\n",
+    "#Get a list of columns with only True and False values\n",
     "true_false_columns = actMath11_df.columns[actMath11_df.apply(lambda col: col.isin([True, False]).all())]\n",
     "\n",
-    "# Convert to a list\n",
+    "#Convert to a list\n",
     "true_false_columns_list = true_false_columns.tolist()\n",
     "\n",
     "#Make true false 1 and 0\n",
@@ -327,40 +327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['school_High School A',\n",
-       " 'school_High School B',\n",
-       " 'school_High School C',\n",
-       " 'school_High School D',\n",
-       " 'category_MATHEMATICS',\n",
-       " 'category_ENGLISH',\n",
-       " 'category_SCIENCE',\n",
-       " 'category_SOCIAL_STUDIES',\n",
-       " 'category_FOREIGN_LANGUAGE',\n",
-       " 'category_PERFORMING_ARTS',\n",
-       " 'category_VISUAL_ARTS',\n",
-       " 'category_TECHNOLOGY',\n",
-       " 'category_BUSINESS',\n",
-       " 'category_TRADES',\n",
-       " 'category_AGRICULTURE',\n",
-       " 'category_PHYSICAL_EDUCATION',\n",
-       " 'category_HEALTH',\n",
-       " 'category_CAREER_PREP',\n",
-       " 'category_MILITARY_SCIENCE']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['school_High School A', 'school_High School B', 'school_High School C', 'school_High School D', 'category_MATHEMATICS', 'category_ENGLISH', 'category_SCIENCE', 'category_SOCIAL_STUDIES', 'category_FOREIGN_LANGUAGE', 'category_PERFORMING_ARTS', 'category_VISUAL_ARTS', 'category_TECHNOLOGY', 'category_BUSINESS', 'category_TRADES', 'category_AGRICULTURE', 'category_PHYSICAL_EDUCATION', 'category_HEALTH', 'category_CAREER_PREP', 'category_MILITARY_SCIENCE']\n"
+     ]
     }
    ],
    "source": [
-    "feature_list"
+    "print(feature_list)"
    ]
   },
   {
@@ -380,7 +359,6 @@
     }
    ],
    "source": [
-    "# YOUR CODE HERE\n",
     "y = actMath11_df['is_proficient']\n",
     "X = actMath11_df[feature_list]\n",
     "\n",
@@ -452,39 +430,34 @@
     }
    ],
    "source": [
-    "# 1. Create the LogisticRegression model object below and assign to variable 'model'\n",
+    "# Create the LogisticRegression model object\n",
     "model = LogisticRegression()\n",
     "\n",
-    "# 2. Fit the model to the training data below\n",
+    "# Fit the model to the training data\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# 3. Make predictions on the test data using the predict_proba() method and assign the \n",
-    "# result to the variable 'probability_predictions' below\n",
+    "# Make predictions on the test data\n",
     "probability_predictions = model.predict_proba(X_test)\n",
     "\n",
     "# print the first 5 probability class predictions\n",
     "df_print = pd.DataFrame(probability_predictions, columns = ['Class: False', 'Class: True'])\n",
     "print('Class Prediction Probabilities: \\n' + df_print[0:5].to_string(index=False))\n",
     "\n",
-    "# 4. Compute the log loss on 'probability_predictions' and save the result to the variable\n",
-    "# 'l_loss' below\n",
+    "# Compute the log loss\n",
     "l_loss = log_loss(y_test, probability_predictions)\n",
     "print('Log loss: ' + str(l_loss))\n",
     "\n",
-    "# 5. Make predictions on the test data using the predict() method and assign the result \n",
-    "# to the variable 'class_label_predictions' below\n",
+    "# Make predictions on the test data using the predict() method\n",
     "class_label_predictions = model.predict(X_test)\n",
     "\n",
     "# Print the classification report\n",
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(y_test, class_label_predictions))\n",
     "\n",
-    "# print the first 5 class label predictions \n",
+    "# Print the first 5 class label predictions \n",
     "print('Class labels: ' + str(class_label_predictions[0:5]))\n",
     "\n",
-    "# 6.Compute the accuracy score on 'class_label_predictions' and save the result \n",
-    "# to the variable 'acc_score' below\n",
-    "\n",
+    "# Compute the accuracy score on 'class_label_predictions'\n",
     "acc_score = accuracy_score(y_test, class_label_predictions)\n",
     "print('Accuracy: ' + str(acc_score))\n",
     "\n",
